--- a/index.html
+++ b/index.html
@@ -1,67 +1,35 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>DriveHub Motors - Home</title>
+<link rel="stylesheet" href="styles/main.css">
 <style>
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-  }
-
-  /* Navigation */
-  nav {
-    background-color: #333;
-    padding: 10px 0;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-  }
-
-  nav a {
-    color: white;
-    text-decoration: none;
-    margin: 0 15px;
-    font-weight: bold;
-    transition: color 0.3s;
-  }
-
-  nav a:hover {
-    color: #ff6b00;
-  }
-
-  nav a.active {
-    color: #ff6b00;
-    text-decoration: underline;
-  }
-
   /* Hero Section */
   .hero {
-    height: 50vh;
-    background: url('carImages/carBackground.png.jpg') center/cover no-repeat;
-    color: white;
+    height: 55vh;
+    background: linear-gradient(135deg, rgba(12, 16, 24, 0.8), rgba(18, 24, 38, 0.4)),
+      url('carImages/carBackground.png.jpg') center/cover no-repeat;
+    color: #f7f3ec;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
-    margin-top: 60px; /* spacing for fixed nav */
+    text-shadow: 2px 2px 10px rgba(12, 16, 24, 0.6);
   }
 
   .hero h1 {
-    font-size: 3rem;
+    font-size: clamp(2.5rem, 4vw, 3.6rem);
     margin-bottom: 10px;
-    color:blue;
+    color: #f7f3ec;
   }
 
   .hero p {
     font-size: 1.2rem;
     margin-bottom: 20px;
+    color: rgba(247, 243, 236, 0.85);
   }
 
   /* Car slider container */
@@ -69,10 +37,82 @@
     overflow: hidden;
     white-space: nowrap;
     margin: 30px 0;
-    padding: 10px 0;
-    background-color: #fff;
-    border-top: 2px solid #333;
-    border-bottom: 2px solid #333;
+    padding: 14px 0;
+    background-color: #fffaf2;
+    border-top: 1px solid rgba(18, 24, 38, 0.12);
+    border-bottom: 1px solid rgba(18, 24, 38, 0.12);
+  }
+
+  /* Carousel Styles */
+  .carousel-container {
+    position: relative;
+    width: 100%;
+    max-width: 1200px; /* Adjust as needed */
+    margin: 0 auto;
+    overflow: hidden;
+  }
+
+  .carousel-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(12, 16, 24, 0.6);
+    color: #f7f3ec;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    z-index: 10;
+    border-radius: 50%;
+  }
+  .prev-btn { left: 10px; }
+  .next-btn { right: 10px; }
+
+  /* Featured Section */
+  .featured-section {
+    padding: 40px 20px;
+    text-align: center;
+  }
+  .featured-section h2 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    color: #121826;
+  }
+  .featured-gallery {
+    display: flex; /* This will be a long row of cards */
+    gap: 20px; /* Space between cards */
+    transition: transform 0.5s ease-in-out; /* Smooth sliding animation */
+  }
+  .featured-gallery-wrapper {
+    overflow: hidden;
+  }
+  .featured-card {
+    background: white;
+    border-radius: 16px;
+    box-shadow: 0 10px 30px rgba(12, 16, 24, 0.12);
+    width: 300px;
+    text-align: left;
+    flex-shrink: 0; /* Prevent cards from shrinking */
+    transition: transform 0.3s ease;
+  }
+  .featured-card:hover {
+    transform: translateY(-10px);
+  }
+  .featured-card img {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+  }
+  .featured-card-details {
+    padding: 15px;
+  }
+  .featured-card-details h3 {
+    margin-top: 0;
+  }
+  .featured-card-details .price {
+    font-weight: bold;
+    color: #1f7a7a;
   }
 
   .car-slider img {
@@ -96,29 +136,72 @@
     }
   }
 
-  footer {
+  /* Testimonials Section */
+  .testimonials-section {
+    background-color: #f7f3ec; /* A light sand background */
+    padding: 40px 20px;
     text-align: center;
-    padding: 10px;
-    background-color: #222;
-    color: white;
+  }
+  .testimonials-section h2 {
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+    color: #121826;
+  }
+  .testimonials-gallery {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+  }
+  .testimonial-card {
+    background: white;
+    border-radius: 16px;
+    box-shadow: 0 10px 24px rgba(12, 16, 24, 0.08);
+    width: 320px;
+    padding: 25px;
+    text-align: left;
+    border-top: 4px solid #f0a03a;
+  }
+  .testimonial-card blockquote {
+    margin: 0;
+    font-style: italic;
+    color: #445064;
+    line-height: 1.6;
+  }
+  .testimonial-card .customer-name {
+    margin-top: 15px;
+    font-weight: bold;
+    text-align: right;
+    color: #121826;
   }
 </style>
 </head>
 <body>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="vehicles.html">Vehicles</a>
-  <a href="about.html">About</a>
-  <a href="contact.html">Contact</a>
-  <a href="my-inquiries.html">My Inquiries</a>
-  <a href="orders.html">My Orders</a>
-  <a href="admin.html">Admin</a>
-</nav>
-
 <section class="hero">
-  <h1>Find Your Dream Car</h1>
-  <p>Explore our latest collection of cars</p>
+  <span class="badge">Marketplace</span>
+  <h1>Find the right ride, fast.</h1>
+  <p>Browse curated inventory, transparent pricing, and instant inquiries all in one place.</p>
+  <div class="hero-actions">
+    <a href="vehicles.html" class="btn btn-primary">Browse Inventory</a>
+    <a href="contact.html" class="btn btn-secondary">Talk to an Advisor</a>
+  </div>
+  <form class="hero-search">
+    <select aria-label="Vehicle type">
+      <option value="">Any type</option>
+      <option value="Sedan">Sedan</option>
+      <option value="SUV">SUV</option>
+      <option value="Coupe">Coupe</option>
+      <option value="Truck">Truck</option>
+    </select>
+    <input type="number" placeholder="Max price" aria-label="Max price">
+    <button type="button">Search</button>
+  </form>
+  <div class="trust-strip">
+    <span>Verified listings</span>
+    <span>Flexible financing</span>
+    <span>24-hour response</span>
+  </div>
 </section>
 
 <!-- Car Animation -->
@@ -131,18 +214,152 @@
   <img src="carImages/car6.png.jpg" alt="Car 6">
 </div>
 
+<section class="section">
+  <div class="section-header">
+    <div>
+      <span class="badge">Featured</span>
+      <h2>Featured Vehicles</h2>
+    </div>
+    <p>Top picks from our advisors, chosen for value, condition, and reliability.</p>
+  </div>
+  <div class="carousel-container">
+    <button class="carousel-btn prev-btn">&lt;</button>
+    <div class="featured-gallery-wrapper">
+      <div class="featured-gallery">
+        <div class="featured-card">
+          <img src="carImages/car8.png.jpg" alt="Luxury SUV">
+          <div class="featured-card-details">
+            <h3>Range Rover Evoque</h3>
+            <p>A perfect blend of luxury and capability.</p>
+            <p class="price">$50,000</p>
+          </div>
+        </div>
+        <div class="featured-card">
+          <img src="carImages/car9.png.jpg" alt="Performance Sedan">
+          <div class="featured-card-details">
+            <h3>BMW 3 Series</h3>
+            <p>Experience sheer driving pleasure.</p>
+            <p class="price">$48,000</p>
+          </div>
+        </div>
+        <div class="featured-card">
+          <img src="carImages/car3.png.jpg" alt="Family SUV">
+          <div class="featured-card-details">
+            <h3>Family SUV</h3>
+            <p>Spacious and safe for the whole family.</p>
+            <p class="price">$32,000</p>
+          </div>
+        </div>
+        <div class="featured-card">
+          <img src="carImages/car4.png.jpg" alt="Electric Hatchback">
+          <div class="featured-card-details">
+            <h3>Electric Hatchback</h3>
+            <p>Eco-friendly and perfect for city driving.</p>
+            <p class="price">$29,000</p>
+          </div>
+        </div>
+        <!-- Add more featured cars as needed -->
+      </div>
+    </div>
+    <button class="carousel-btn next-btn">&gt;</button>
+  </div>
+</section>
+
+<section class="section">
+  <div class="section-header">
+    <div>
+      <span class="badge">Why Drive Hub</span>
+      <h2>Everything you need to buy with confidence</h2>
+    </div>
+    <p>We combine a marketplace experience with dealership-grade inspection and service.</p>
+  </div>
+  <div class="card-grid">
+    <div class="feature-card">
+      <h3>Inspection-first inventory</h3>
+      <p>Each vehicle is inspected and verified before it ever hits the list.</p>
+    </div>
+    <div class="feature-card">
+      <h3>Transparent pricing</h3>
+      <p>See the full breakdown with no hidden fees or last-minute add-ons.</p>
+    </div>
+    <div class="feature-card">
+      <h3>Smart financing</h3>
+      <p>Compare lender offers and get pre-approved without leaving the site.</p>
+    </div>
+    <div class="feature-card">
+      <h3>Fast delivery</h3>
+      <p>Reserve online and schedule pickup or doorstep delivery in days.</p>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="section-header">
+    <div>
+      <span class="badge">Marketplace stats</span>
+      <h2>Real-time demand insights</h2>
+    </div>
+    <p>We track what shoppers want most so you can make informed decisions.</p>
+  </div>
+  <div class="stat-grid">
+    <div class="stat-card">
+      <strong>8,400+</strong>
+      <span>Monthly searches</span>
+    </div>
+    <div class="stat-card">
+      <strong>92%</strong>
+      <span>Inquiries answered in 24 hours</span>
+    </div>
+    <div class="stat-card">
+      <strong>36 hours</strong>
+      <span>Average delivery time</span>
+    </div>
+    <div class="stat-card">
+      <strong>4.8/5</strong>
+      <span>Buyer satisfaction</span>
+    </div>
+  </div>
+</section>
+
+<!-- Customer Testimonials Section -->
+<section class="testimonials-section">
+  <h2>What Our Customers Say</h2>
+  <div class="testimonials-gallery">
+    <div class="testimonial-card">
+      <blockquote>"The buying process was incredibly smooth and transparent. The team at DriveHub Motors helped me find the perfect car for my family. Highly recommended!"</blockquote>
+      <p class="customer-name">- Jane Doe</p>
+    </div>
+    <div class="testimonial-card">
+      <blockquote>"I'm thrilled with my new sports car! The selection was fantastic, and I got a great deal. The staff was knowledgeable and not pushy at all."</blockquote>
+      <p class="customer-name">- Engineer Jed</p>
+    </div>
+    <div class="testimonial-card">
+      <blockquote>"As a first-time buyer, I was nervous, but the team guided me through every step. Excellent customer service and a wonderful experience overall."</blockquote>
+      <p class="customer-name">- Emily Jones</p>
+    </div>
+  </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="cta-band">
+    <h3>Ready to secure your next vehicle?</h3>
+    <p>Start an inquiry in minutes or talk to a specialist about trade-ins and financing.</p>
+    <div class="hero-actions">
+      <a href="vehicles.html" class="btn btn-primary">Start Browsing</a>
+      <a href="contact.html" class="btn btn-secondary">Get a Quote</a>
+    </div>
+  </div>
+</section>
+
+
 <footer>
   <p>&copy; 2025 DriveHub Motors | All Rights Reserved</p>
 </footer>
 
-<script src="scripts/auth.js"></script>
-<script>
-  // This script is for page-specific logic
-  document.addEventListener('DOMContentLoaded', () => {
-    // Highlight active nav link
-    updateNav();
-    document.querySelector('nav a[href="index.html"]').classList.add('active');
-  });
-</script>
+<script src="scripts/shared.js" type="module"></script>
+<script src="scripts/auth.js" type="module"></script>
+<script src="scripts/carousel.js"></script>
+
 </body>
 </html>
