--- a/my-inquiries.html
+++ b/my-inquiries.html
@@ -1,208 +1,260 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Inquiries - Drive Hub Motors</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      padding: 0;
-      margin: 0;
-    }
-
-
-    /* Navigation bar */
-    nav {
-      background-color: #232f3e;
-      color: white;
-      padding: 10px 0;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 20px;
-      font-weight: bold;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .order {
-      background: white;
-      border-radius: 8px;
-      padding: 15px;
-      margin: 15px auto;
-      width: 80%;
-      display: flex;
-      align-items: center;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-
-    .order img {
-      width: 150px;
-      height: 100px;
-      object-fit: cover;
-      border-radius: 5px;
-      margin-right: 20px;
-    }
-
-    .order-details h3 {
-      margin: 0;
-      color: #222;
-    }
-
-    .order-details p {
-      margin: 5px 0;
-      color: #555;
-    }
-
-    .order-actions {
-      margin-left: auto;
-    }
-
-    button {
-      background-color: #0073e6;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #005bb5;
-    }
-
-    .empty {
-      text-align: center;
-      color: #777;
-      margin-top: 40px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Inquiries - Drive Hub Motors</title>
+    <link rel="stylesheet" href="styles/main.css">
+    <style>
+        h2 { text-align: center; margin: 20px 0; color: #333; }
+        /* Modal Styles */
+        .modal-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.6);
+            display: none; /* Hidden by default */
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+        .modal-content {
+            background: white;
+            padding: 25px;
+            border-radius: 8px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+            text-align: center;
+            max-width: 400px;
+            width: 90%;
+        }
+        .modal-content p { margin-bottom: 20px; font-size: 1.1rem; }
+        .modal-content input { width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
+        .modal-actions button {
+            padding: 10px 20px;
+            margin: 0 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        .modal-actions .btn-confirm { background-color: #28a745; color: white; }
+        .modal-actions .btn-cancel { background-color: #dc3545; color: white; }
+        .modal-actions .btn-ok { background-color: #007bff; color: white; }
+    </style>
 </head>
 <body>
-  <script src="scripts/auth.js"></script>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="vehicles.html">Vehicles</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-    <a href="my-inquiries.html">My Inquiries</a>
-    <a href="orders.html">My Orders</a>
-    <a href="admin.html">Admin</a>
-  </nav>
+    <h2>Your Vehicle Inquiries</h2>
+    <div id="inquiries-list" class="list-container"></div>
 
-  <h2>Your Vehicle Inquiries</h2>
-  <div id="inquiries-list"></div>
+    <!-- Modal for confirmations and notifications -->
+    <div id="modal" class="modal-overlay">
+        <div class="modal-content">
+            <p id="modal-message"></p>
+            <div id="modal-actions"></div>
+        </div>
+    </div>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      displayInquiries();
+    <footer>
+        <p>&copy; 2025 Drive Hub Motors | All Rights Reserved</p>
+    </footer>
+
+<script src="scripts/shared.js" type="module"></script>
+<script src="scripts/auth.js" type="module"></script>
+<script type="module">
+const API_BASE_URL = 'http://localhost:3000';
+
+document.addEventListener("DOMContentLoaded", async () => {
+  const token = localStorage.getItem('token');
+  const role = localStorage.getItem('role');
+
+  // Redirect non-logged-in or non-user roles
+  if (!token || role !== 'user') {
+    window.location.href = "login.html";
+    return;
+  }
+
+  await loadInquiries();
+
+  // Event delegation for inquiry actions
+  document.getElementById("inquiries-list").addEventListener("click", async (e) => {
+    if (e.target.tagName !== 'BUTTON' || !e.target.dataset.action) return;
+
+    const id = e.target.dataset.id;
+    const action = e.target.dataset.action;
+    const price = e.target.dataset.price;
+
+    if (action === 'cancel') {
+      const confirmed = await showConfirmation("Are you sure you want to cancel this inquiry?");
+      if (confirmed) {
+        await cancelInquiry(id);
+      }
+    } else if (action === 'pay') {
+      await payWithMpesa(id, price, e.target);
+    }
+  });
+});
+
+// Load inquiries for logged-in user
+async function loadInquiries() {
+  const container = document.getElementById("inquiries-list");
+  container.innerHTML = "<p>Loading inquiries...</p>";
+
+  try {
+    const token = localStorage.getItem('token');
+    const res = await fetch(`${API_BASE_URL}/api/inquiries`, {
+      headers: { 'Authorization': `Bearer ${token}` }
     });
 
-    async function displayInquiries() {
-      const container = document.getElementById("inquiries-list");
-      try {
-        const token = localStorage.getItem('token');
-        const response = await fetch('http://localhost:3000/api/inquiries', {
-          headers: {
-            'Authorization': `Bearer ${token}`
-          }
-        });
-        const inquiries = await response.json();
-
-        container.innerHTML = "";
-        if (inquiries.length === 0) {
-          container.innerHTML = "<p class='empty'>No inquiries yet.</p>";
-        } else {
-          inquiries.forEach(item => {
-            const div = document.createElement("div");
-            div.classList.add("order");
-
-            // Format the price as USD currency
-            const formattedPrice = new Intl.NumberFormat('en-US', { style: 'currency', currency: 'USD' }).format(item.price);
-
-            div.innerHTML = `
-              <img src="${item.img}" alt="${item.name}">
-              <div class="order-details">
-                <h3>${item.name}</h3>
-                <p>Price: ${formattedPrice}</p>
-                <p>Inquiry Date: ${item.date}</p>
-                <p>Status: <strong>${item.status}</strong></p>
-              </div>
-              <div class="order-actions" style="display: flex; flex-direction: column; gap: 10px;">
-                ${item.status === 'Approved' ?
-                  `<button style="background-color: #28a745;" onclick="payWithMpesa(${item.id}, ${item.price})">Pay with M-Pesa</button>` : ''
-                }
-                ${item.status === 'Pending' ?
-                  `<button onclick="cancelInquiry(${item.id}, '${item.name}')">Cancel</button>` : ''
-                }
-              </div>
-            `;
-            container.appendChild(div);
-          });
-        }
-      } catch (error) {
-        container.innerHTML = "<p class='empty'>Failed to load inquiries.</p>";
-        console.error('Error fetching inquiries:', error);
+    if (!res.ok) {
+      if (res.status === 401) {
+        showMessage("Session expired. Please log in again.");
+        localStorage.removeItem('token');
+        localStorage.removeItem('role');
+        window.location.href = 'login.html';
       }
+      throw new Error(`Server responded with ${res.status}`);
     }
 
-    async function cancelInquiry(id, name) {
-      // Since inquiries are just orders, we can use the orders cancel endpoint.
-      // We will also check if the user wants to proceed.
-      if (!confirm(`Are you sure you want to cancel the inquiry for ${name}?`)) return;
+    const inquiries = await res.json();
+    container.innerHTML = "";
 
-      const token = localStorage.getItem('token');
-      await fetch(`http://localhost:3000/api/orders/${id}/cancel`, {
-        method: 'PUT',
-        headers: { 'Authorization': `Bearer ${token}` }
-      });
-      alert(`${name} inquiry canceled.`);
-      displayInquiries(); // Refresh the list
+    if (inquiries.length === 0) {
+      container.innerHTML = "<p class='empty-message'>No inquiries yet.</p>";
+      return;
     }
 
-    async function payWithMpesa(orderId, amount) {
-      const phone = prompt("Please enter your M-Pesa phone number (e.g., 2547...):");
-      if (!phone || !/^(254)\d{9}$/.test(phone)) {
-        alert("Invalid phone number format. Please use 254...");
-        return;
+    inquiries.forEach(item => {
+      const div = document.createElement("div");
+      div.className = "list-item"; /* Use shared class from main.css */
+      const formattedPrice = new Intl.NumberFormat('en-US', { style: 'currency', currency: 'USD' }).format(item.price);
+
+      div.innerHTML = `
+        <img src="${item.img}" alt="${item.name}">
+        <div class="list-item-details">
+          <h3>${item.name}</h3>
+          <p>Price: ${formattedPrice}</p>
+          <p>Inquiry Date: ${item.date}</p>
+          <p>Status: <span class="status-badge status-${item.status.toLowerCase()}">${item.status}</span></p>
+        </div>
+        <div class="list-item-actions">
+          ${item.status === 'Pending' ? `<button data-id="${item.id}" data-action="cancel">Cancel</button>` : ''}
+          ${item.status === 'Approved' ? `<button data-id="${item.id}" data-price="${item.price}" data-action="pay">Pay with M-Pesa</button>` : ''}
+        </div>
+      `;
+      container.appendChild(div);
+    });
+  } catch (err) {
+    console.error(err);
+    container.innerHTML = "<p class='empty-message'>Failed to load inquiries. Check console.</p>";
+  }
+}
+
+// Cancel an inquiry
+async function cancelInquiry(id) {
+  try {
+    const token = localStorage.getItem('token');
+    const res = await fetch(`${API_BASE_URL}/api/orders/${id}/cancel`, {
+      method: "PUT",
+      headers: { 'Authorization': `Bearer ${token}` }
+    });
+    if (!res.ok) throw new Error(`Server responded with ${res.status}`);
+    const data = await res.json();
+    showMessage(data.message || 'Inquiry canceled successfully.');
+    loadInquiries();
+  } catch (err) {
+    console.error('Failed to cancel inquiry:', err);
+    showMessage('Failed to cancel inquiry. Please try again.');
+  }
+}
+
+// Pay with M-Pesa
+async function payWithMpesa(orderId, amount, btn) {
+  const phone = await showPhonePrompt("Enter your M-Pesa phone number (2547xxxxxxxx):");
+  if (!phone) return;
+
+  btn.disabled = true;
+  btn.textContent = 'Processing...';
+
+  try {
+    const token = localStorage.getItem('token');
+    const res = await fetch(`${API_BASE_URL}/api/mpesa/stk-push`, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${token}` },
+      body: JSON.stringify({ orderId, amount: Math.round(amount), phone })
+    });
+    if (!res.ok) throw new Error(`Server responded with ${res.status}`);
+    const data = await res.json();
+    showMessage(data.CustomerMessage || 'STK push sent. Check your phone.');
+  } catch (err) {
+    console.error(err);
+    showMessage('Payment failed. Please try again.');
+  } finally {
+    btn.disabled = false;
+    btn.textContent = 'Pay with M-Pesa';
+    setTimeout(loadInquiries, 8000);
+  }
+}
+
+// --- Modal Helpers ---
+const modal = document.getElementById('modal');
+const modalMessage = document.getElementById('modal-message');
+const modalActions = document.getElementById('modal-actions');
+
+function showMessage(message) {
+  modalMessage.textContent = message;
+  modalActions.innerHTML = `<button class="btn-ok">OK</button>`;
+  modal.style.display = 'flex';
+  modal.querySelector('.btn-ok').onclick = () => modal.style.display = 'none';
+}
+
+function showConfirmation(message) {
+  return new Promise(resolve => {
+    modalMessage.textContent = message;
+    modalActions.innerHTML = `<button class="btn-confirm">Yes</button><button class="btn-cancel">No</button>`;
+    modal.style.display = 'flex';
+    modal.querySelector('.btn-confirm').onclick = () => { modal.style.display = 'none'; resolve(true); };
+    modal.querySelector('.btn-cancel').onclick = () => { modal.style.display = 'none'; resolve(false); };
+  });
+}
+
+function showPhonePrompt(message) {
+  return new Promise(resolve => {
+    modalMessage.textContent = message;
+    modalActions.innerHTML = `
+      <label for="phone-input">Phone Number:</label>
+      <p id="phone-error" style="color: red; font-size: 0.9rem; display: none;"></p>
+      <input type="tel" id="phone-input" placeholder="254712345678">
+      <button class="btn-confirm">Submit</button>
+      <button class="btn-cancel">Cancel</button>
+    `;
+    modal.style.display = 'flex';
+    const phoneInput = document.getElementById('phone-input');
+
+    const phoneError = document.getElementById('phone-error');
+
+    modal.querySelector('.btn-confirm').onclick = () => {
+      const phone = phoneInput.value;
+      if (!/^254\d{9}$/.test(phone)) {
+        phoneInput.style.border = '1px solid red';
+        phoneError.textContent = "Invalid format. Use 2547xxxxxxxx.";
+        phoneError.style.display = 'block';
+      } else {
+        modal.style.display = 'none';
+        resolve(phone);
       }
+    };
+    modal.querySelector('.btn-cancel').onclick = () => { modal.style.display = 'none'; resolve(null); };
+  });
+}
 
-      alert("Processing payment... Please check your phone to enter your M-Pesa PIN.");
-
-      try {
-        const token = localStorage.getItem('token');
-        const response = await fetch('http://localhost:3000/api/mpesa/stk-push', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-            'Authorization': `Bearer ${token}`
-          },
-          body: JSON.stringify({ amount: Math.round(amount), phone, orderId })
-        });
-
-        const data = await response.json();
-        if (!response.ok) {
-          throw new Error(data.message || 'Payment initiation failed.');
-        }
-        alert(data.CustomerMessage || 'STK push sent successfully. Please complete the transaction on your phone.');
-      } catch (error) {
-        console.error('M-Pesa payment error:', error);
-        alert(`An error occurred: ${error.message}`);
-      }
-    }
-  </script>
+// Logout function
+function logout() {
+  localStorage.removeItem('token');
+  localStorage.removeItem('role');
+  window.location.href = 'login.html';
+}
+</script>
 </body>
 </html>
