--- a/about.html
+++ b/about.html
@@ -5,119 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Drive Hub Motors</title>
     <link rel="stylesheet" href="styles/about.css">
-    <style>
-        * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    line-height: 1.6;
-}
-
-nav {
-    background-color: #333;
-    padding: 1rem;
-    text-align: center;
-}
-
-nav a {
-    color: white;
-    text-decoration: none;
-    margin: 0 15px;
-    font-weight: bold;
-    transition: 0.3s;
-}
-
-nav a:hover {
-    color: #ff6b00;
-}
-
-.about-section {
-    max-width: 1200px;
-    margin: 2rem auto;
-    padding: 0 20px;
-    text-align: center;
-}
-
-.about-text h2 {
-    color: #2c5282;
-    margin-bottom: 1rem;
-}
-
-.about-text p {
-    margin-bottom: 1rem;
-    color: #555;
-}
-
-.about-images {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 2rem;
-    flex-wrap: wrap;
-}
-
-.about-images img {
-    width: 200px;
-    border-radius: 10px;
-    transition: transform 0.3s;
-}
-
-/* Swing animation */
-.swing {
-    animation: swing 2s infinite alternate ease-in-out;
-}
-
-@keyframes swing {
-    0% { transform: rotate(-10deg); }
-    50% { transform: rotate(10deg); }
-    100% { transform: rotate(-10deg); }
-}
-
-footer {
-    text-align: center;
-    padding: 1rem;
-    background-color: #333;
-    color: white;
-    margin-top: 3rem;
-}
-
-    </style>
+    <link rel="stylesheet" href="styles/main.css"> <!-- For shared styles -->
 </head>
 <body>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="vehicles.html">Vehicles</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="my-inquiries.html">My Inquiries</a>
-      <a href="orders.html">My Orders</a>
-      <a href="admin.html">Admin</a>
-    </nav>
-
     <section class="about-section">
-        <script src="scripts/auth.js"></script>
-        <div class="about-text">
-            <h2>About Us</h2>
-            <p>Welcome to Drive Hub Motors – your trusted destination for quality vehicles. We specialize in selling a wide range of new and pre-owned cars from top brands like Toyota, BMW, Honda, and Yamaha.</p>
-            <p>Our mission is to make vehicle buying simple, transparent, and affordable. With an expert team and reliable services, we ensure every customer drives away satisfied.</p>
-            <p>Whether you are looking for a family car, a luxury sedan, or a sport bike, we have something for everyone.</p>
+        <div class="about-hero">
+            <div>
+                <p class="about-eyebrow">Marketplace built for buyers</p>
+                <h2>We bring clarity to the car search.</h2>
+                <p>Drive Hub Motors is a curated marketplace for new and pre-owned vehicles from trusted brands like Toyota, BMW, Honda, and Yamaha.</p>
+                <p>Our team verifies inventory, negotiates transparent pricing, and supports every step from inquiry to delivery.</p>
+            </div>
+            <div class="about-stats">
+                <div>
+                    <h3>1,200+</h3>
+                    <p>Vehicles delivered</p>
+                </div>
+                <div>
+                    <h3>12</h3>
+                    <p>Partner brands</p>
+                </div>
+                <div>
+                    <h3>4.8/5</h3>
+                    <p>Customer rating</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="about-values">
+            <div class="value-card">
+                <h3>Verified inventory</h3>
+                <p>Every listing goes through a multi-point inspection with clear history and pricing.</p>
+            </div>
+            <div class="value-card">
+                <h3>Transparent deals</h3>
+                <p>We show the full picture: fair pricing, financing options, and ownership costs.</p>
+            </div>
+            <div class="value-card">
+                <h3>Ongoing care</h3>
+                <p>Service reminders, support, and concierge-style follow-up after purchase.</p>
+            </div>
         </div>
 
         <div class="about-images">
-            <img src="carImages/car1.png.jpg" alt="Car 1" class="swing">
-            <img src="carImages/car2.png.jpg" alt="Car 2" class="swing">
-            <img src="carImages/car3.png.jpg" alt="Car 3" class="swing">
-            <img src="carImages/car4.png.jpg" alt="Car 4" class="swing">
+            <img src="carImages/car1.png.jpg" alt="Car 1">
+            <img src="carImages/car2.png.jpg" alt="Car 2">
+            <img src="carImages/car3.png.jpg" alt="Car 3">
+            <img src="carImages/car4.png.jpg" alt="Car 4">
         </div>
     </section>
 
     <footer>
         <p>&copy; 2025 Drive Hub Motors | All Rights Reserved</p>
     </footer>
+    <script src="scripts/shared.js" type="module"></script>
+    <script src="scripts/auth.js" type="module"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        document.querySelector('nav a[href="about.html"]').classList.add('active');
+      });
+    </script>
 </body>
 </html>
