--- a/register.html
+++ b/register.html
@@ -4,50 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Drive Hub Motors</title>
+    <link rel="stylesheet" href="styles/main.css"> <!-- Shared styles -->
     <style>
-        body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; }
-        nav { background-color: #333; padding: 10px 0; text-align: center; position: fixed; top: 0; width: 100%; z-index: 1000; }
-        nav a { color: white; text-decoration: none; margin: 0 15px; font-weight: bold; transition: color 0.3s; }
-        nav a:hover { color: #ff6b00; }
-        nav a.active { color: #ff6b00; text-decoration: underline; }
-
-        .form-container { background: white; padding: 30px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); width: 320px; text-align: center; margin: 30px auto; }
-        h2 { margin-bottom: 20px; color: #333; }
-        input { width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
-        button { width: 100%; padding: 10px; background-color: #28a745; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; }
-        button:hover { background-color: #218838; }
-        .message { margin-top: 15px; }
-        .message.error { color: red; }
-        .message.success { color: green; }
-        .switch-form { margin-top: 20px; font-size: 14px; }
-        .switch-form a { color: #007bff; text-decoration: none; }
+        /* Page-specific styles */
+        body { background-image: url('https://images.unsplash.com/photo-1494976388531-d1058494cdd8?q=80&w=2070&auto=format&fit=crop'); background-size: cover; background-position: center; background-attachment: fixed; }
+        .form-container button { background-color: #f0a03a; }
+        .form-container button:hover { background-color: #d78822; }
+        body { display: flex; flex-direction: column; min-height: 100vh; }
+        main { flex-grow: 1; display: flex; justify-content: center; align-items: center; }
     </style>
 </head>
 <body>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="vehicles.html">Vehicles</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="my-inquiries.html">My Inquiries</a>
-      <a href="orders.html">My Orders</a>
-      <a href="admin.html">Admin</a>
-    </nav>
-
-    <div class="form-container">
-        <h2>Register</h2>
-        <form id="register-form">
-            <input type="text" id="username" placeholder="Username" required>
-            <input type="password" id="password" placeholder="Password" required>
-            <button type="submit">Register</button>
-            <p id="message" class="message"></p>
-        </form>
-        <div class="switch-form">
-            Already have an account? <a href="login.html">Login here</a>
+    <main>
+        <div class="form-container">
+            <h2>Create Your Account</h2>
+            <form id="register-form">
+                <input type="email" id="email" placeholder="Email" required>
+                <input type="password" id="password" placeholder="Password" required>
+                <input type="password" id="confirm-password" placeholder="Confirm Password" required>
+                <button type="submit">Register</button>
+                <p id="message" class="message"></p>
+            </form>
+            <div class="switch-form">
+                Already have an account? <a href="login.html">Login here</a>
+            </div>
         </div>
-    </div>
+    </main>
 
-    <!-- This script is essential for managing the navigation and authentication state -->
-    <script src="scripts/auth.js"></script> 
+    <footer>
+        <p>&copy; 2025 Drive Hub Motors | All Rights Reserved</p>
+    </footer>
+
+    <script src="scripts/shared.js" type="module"></script>
+    <script src="scripts/auth.js" type="module"></script>
+    <script src="scripts/modal.js"></script>
+    <script type="module">
+      import { API_BASE_URL } from './scripts/config.js';
+
+      document.addEventListener('DOMContentLoaded', () => {
+        const registerForm = document.getElementById('register-form');
+
+        registerForm.addEventListener('submit', async (event) => {
+          event.preventDefault();
+          const email = document.getElementById("email").value;
+          const password = document.getElementById("password").value;
+          const confirmPassword = document.getElementById("confirm-password").value;
+          const messageElement = document.getElementById("message");
+
+          if (password !== confirmPassword) {
+            messageElement.textContent = "Passwords do not match.";
+            messageElement.className = "message error";
+            return;
+          }
+
+          try {
+            const res = await fetch(`${API_BASE_URL}/api/auth/register`, {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({ email, password })
+            });
+            const data = await res.json();
+            if (res.ok) {
+              showMessage('Registered successfully! Redirecting to login...');
+              setTimeout(() => window.location.href = "login.html", 1500);
+            } else {
+              messageElement.textContent = data.message;
+              messageElement.className = "message error";
+            }
+          } catch (error) {
+            messageElement.textContent = "An error occurred. Could not connect to the server.";
+            messageElement.className = "message error";
+          }
+        });
+      });
+    </script>
 </body>
 </html>
